--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /teaching/
+title: "code"
+permalink: /code/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
+{% for post in site.code reversed %}
   {% include archive-single.html %}
 {% endfor %}
