--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "research"
+title: "Full Seismic Modeling, Imaging and Inversion"
 permalink: /research/
 author_profile: true
 ---
